--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,7 @@
 <IfModule mime_module>
   AddHandler application/x-httpd-ea-php81 .php .php8 .phtml
 </IfModule>
+<Files .env>
+    Order allow,deny
+    Deny from all
+</Files>
